<resources>
    <string name="app_name" translatable="false">VMess</string>
    <string name="author_app_first_name" translatable="false">Viet</string>
    <string name="author_app_last_name" translatable="false">Mai</string>
    <string name="author_app_full_name" translatable="false">Mai Quoc Viet</string>
    <string name="dummy_chat_sender" translatable="false">I\'v created this application since i was 21 years old</string>
    <string name="dummy_chat_receiver" translatable="false">When were you create this app?</string>
    <string name="dummy_chat_receiver_2" translatable="false">Do you know what time it is? &#129300;</string>
    <string name="dummy_chat_sender_2" translatable="false">It\'s morning in Vietnam &#128526;</string>
    <string name="dummy_first_chat">You have connected to this person. Text something to share your story.</string>
    <string name="dummy_first_chat_group">%1$s has created this group. Add new member to this group to share the story.</string>
    <string name="dummy_user_name">Application User</string>
    <string name="dummy_empty_string" translatable="false" />
    <string name="dummy_encrypted_message">This message was encrypted</string>
    <string name="label_switch_accounts">Switch Accounts</string>
    <string name="label_dark_mode">Dark Mode</string>
    <string name="label_user_information">Me</string>
    <string name="label_edit_profile">Edit Profile</string>
    <string name="label_edit_bio">Edit Bio</string>
    <string name="label_select_photo">Select Photo</string>
    <string name="label_preview_profile_picture">Preview Profile Picture</string>
    <string name="label_preview_cover_photo">Preview Cover Photo</string>
    <string name="label_edit_details">Edit Details</string>
    <string name="label_edit_links">Edit Links</string>
    <string name="label_all_people">All People</string>
    <string name="label_new_message">New Message</string>
    <string name="label_conversation_archive">Archive</string>
    <string name="label_conversation_unarchive">Unarchive</string>
    <string name="label_conversation_delete">Delete</string>
    <string name="label_conversation_mute_notifications">Mute notifications</string>
    <string name="label_conversation_mute_notifications_shortly">Mute</string>
    <string name="label_conversation_unmute_notifications">Unmute notifications</string>
    <string name="label_conversation_unmute_notifications_shortly">Unmute</string>
    <string name="label_conversation_create_group">Create group with %1$s</string>
    <string name="label_conversation_pref_see_group_members">See group members</string>
    <string name="label_conversation_mark_unread">Mark as unread</string>
    <string name="label_conversation_mark_read">Mark as read</string>
    <string name="label_conversation_ignore_group">Ignore group</string>
    <string name="label_conversation_ignore_messages">Ignore messages</string>
    <string name="label_conversation_add_members">Add members</string>
    <string name="label_conversation_leave_group">Leave group</string>
    <string name="label_off">Off</string>
    <string name="label_1_minute">1 minute</string>
    <string name="label_5_minute">5 minutes</string>
    <string name="label_1_hour">1 hour</string>
    <string name="label_5_hour">5 hours</string>
    <string name="label_1_day">1 day</string>
    <string name="label_1_week">1 week</string>
    <string name="label_4_week">4 weeks</string>
    <string name="label_custom_time">Custom time</string>
    <string name="label_on">On</string>
    <string name="label_system">System</string>
    <string name="label_dark_mode_explain">If system is selected, TAC will automatically adjust your appearance based on your device\'s system settings</string>
    <string name="label_suggested">Suggested</string>
    <string name="label_recent_search">Recent Search</string>
    <string name="label_who_create_this_group">%1$s created this group.</string>
    <string name="label_name">Name</string>
    <string name="label_members">Members</string>
    <string name="label_text_more_number" translatable="false">+%1$d</string>
    <string name="label_you">You</string>
    <string name="label_unfriend_question">Unfriend?</string>
    <string name="label_group_member">Group Members</string>
    <string name="label_settings">Settings</string>
    <string name="label_camera">Camera</string>
    <string name="label_speaker">Speaker</string>
    <string name="label_storage">Storage</string>
    <string name="label_no_internet_connection">No Internet Connection</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_file">File</string>
    <string name="label_turn_off_all_notification">Turn off all notification of this app.</string>
    <string name="label_audio">Audio</string>
    <string name="label_video">Video</string>
    <string name="label_search_messages">Search Messages</string>
    <string name="label_pref_privacy_category">Privacy</string>
    <string name="label_chat_color">Chat color</string>
    <string name="label_reset_chat_color">Reset chat color</string>
    <string name="label_wallpaper">Wallpaper</string>
    <string name="label_reset_wallpaper">Reset wallpaper</string>
    <string name="label_color_default">Default</string>
    <string name="label_latest">Latest</string>
    <string name="label_oldest">Oldest</string>
    <string name="label_largest">Largest</string>
    <string name="label_smallest">Smallest</string>
    <string name="label_no_media">No media</string>
    <string name="label_share_image">Share image</string>
    <string name="label_open_image_in_browser">Open in browser</string>
    <string name="label_zero_media_video_number">0 video</string>
    <string name="label_zero_media_photo_number">0 photo</string>
    <string name="label_zero_media_link_number">0 link</string>
    <string name="label_zero_media_message_number">0 media message</string>
    <plurals name="label_media_video_number" translatable="false">
        <item quantity="one">%d video</item>
        <item quantity="other">%d videos</item>
    </plurals>
    <plurals name="label_media_photo_number">
        <item quantity="one">%d photo</item>
        <item quantity="other">%d photos</item>
    </plurals>
    <plurals name="label_media_links_number">
        <item quantity="one">%d link</item>
        <item quantity="other">%d links</item>
    </plurals>
    <plurals name="label_media_message_number">
        <item quantity="one">%d media message</item>
        <item quantity="other">%d media messages</item>
    </plurals>
    <string name="label_customize_notifications">Customize notifications</string>
    <string name="label_sound_and_appearance_options">Sound and appearance options</string>
    <string name="label_contact_name_and_phone_number" translatable="false">%1$s (%2$s)</string>
    <string name="label_conversation_activity_new_message">New messages</string>
    <string name="label_incoming_voice_call">Incoming voice call</string>
    <string name="label_incoming_video_call">Incoming video call</string>
    <string name="label_or">Or</string>
    <string name="title_brand_name_short" translatable="false">VMess</string>
    <string name="title_male">Male</string>
    <string name="title_female">Female</string>
    <string name="title_non_binary">Non-binary</string>
    <string name="title_transgender">Transgender</string>
    <string name="title_intersex">Intersex</string>
    <string name="title_prefer_not_to_say">Prefer not to say</string>
    <string name="title_remove_account">Remove this account?</string>
    <string name="title_preference_profile">Profile</string>
    <string name="title_preference_preferences">Preferences</string>
    <string name="title_preference_system">System</string>
    <string name="title_preference_manage_accounts">Accounts</string>
    <string name="title_preference_item_dark_mode">Dark Mode</string>
    <string name="title_preference_item_messages_requests">Messages Requests</string>
    <string name="title_preference_item_active_status">Active Status</string>
    <string name="title_preference_item_username">Username</string>
    <string name="title_preference_item_qr_code">QR Code</string>
    <string name="title_preference_item_privacy">Privacy</string>
    <string name="title_preference_item_story">Story</string>
    <string name="title_preference_item_account_settings">Account Settings</string>
    <string name="title_preference_item_report_problem">Report Problem</string>
    <string name="title_preference_item_help">Help</string>
    <string name="title_preference_item_legal_policies">Legal &amp; Policies</string>
    <string name="title_links">Links</string>
    <string name="title_media">Media</string>
    <string name="title_all">All</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="action_remove">Remove</string>
    <string name="action_pref_dark_mode" translatable="false">com.tac.open.dark.mode</string>
    <string name="action_pref_edit_profile" translatable="false">com.tac.open.edit.profile</string>
    <string name="action_pref_account_settings" translatable="false">com.tac.open.account.settings</string>
    <string name="msg_gender_field_policy">Check here to public this field to everyone</string>
    <string name="msg_remove_history_account">%1$s will need to log in again to use from this device.</string>
    <string name="msg_prompt_notification_preference_disappearing_message">When enabled, new messages sent and received in this chat will disappear after they have been seen.</string>
    <string name="key_pref_category_accounts" translatable="false">key_pref_category_accounts</string>
    <string name="key_pref_dark_mode" translatable="false">key_pref_dark_mode</string>
    <string name="key_pref_messages_requests" translatable="false">key_pref_messages_requests</string>
    <string name="key_pref_active_status" translatable="false">key_pref_active_status</string>
    <string name="key_pref_username" translatable="false">key_pref_username</string>
    <string name="key_pref_qr_code" translatable="false">key_pref_qr_code</string>
    <string name="key_pref_privacy" translatable="false">key_pref_privacy</string>
    <string name="key_pref_story" translatable="false">key_pref_story</string>
    <string name="key_pref_notifications_and_sounds" translatable="false">key_pref_notifications_and_sounds</string>
    <string name="key_pref_archived_chats" translatable="false">key_pref_archived_chats</string>
    <string name="key_pref_phone_contacts" translatable="false">key_pref_phone_contacts</string>
    <string name="key_pref_photos_and_media" translatable="false">key_pref_photos_and_media</string>
    <string name="key_pref_account_settings" translatable="false">key_pref_account_settings</string>
    <string name="key_pref_report_problem" translatable="false">key_pref_report_problem</string>
    <string name="key_pref_help" translatable="false">key_pref_help</string>
    <string name="key_pref_edit_profile" translatable="false">key_pref_edit_profile</string>
    <string name="key_pref_chat_wallpaper" translatable="false">key_pref_chat_wallpaper</string>
    <string name="key_pref_disappearing_messages" translatable="false">key_pref_disappearing_messages</string>
    <string name="key_pref_view_media_files" translatable="false">key_pref_view_media_files</string>
    <string name="key_pref_create_group_with" translatable="false">key_pref_create_group_with</string>
    <string name="key_pref_see_group_member" translatable="false">key_pref_see_group_member</string>
    <string name="key_pref_ignore_messages" translatable="false">key_pref_ignore_messages</string>
    <string name="key_pref_block" translatable="false">key_pref_block</string>
    <string name="key_pref_report" translatable="false">key_pref_report</string>
</resources>