<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.EditGenderFragment">

    <RadioGroup
        android:id="@+id/radio_group_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/all_margin"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_male" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_female" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_non_binary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_non_binary" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_transgender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_transgender" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_intersex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_intersex" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_not_to_say"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_prefer_not_to_say" />
    </RadioGroup>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/check_box_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0"
        android:text="@string/msg_gender_field_policy"
        app:layout_constraintEnd_toEndOf="@id/radio_group_gender"
        app:layout_constraintStart_toStartOf="@id/radio_group_gender"
        app:layout_constraintTop_toBottomOf="@id/radio_group_gender" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/all_margin"
        android:theme="@style/ProgressbarLoadingColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_box_policy" />

    <include
        android:id="@+id/included_button"
        layout="@layout/custom_bottom_button" />
</androidx.constraintlayout.widget.ConstraintLayout>