<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/all_padding_common">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_remove_account"
        android:textAppearance="?textAppearanceHeadline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/all_margin_top_soft"
        android:text="@string/msg_remove_history_account"
        android:textAppearance="?textAppearanceBody1"
        app:layout_constraintStart_toStartOf="@id/text_title"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_done"
        style="?android:buttonBarPositiveButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/all_margin_top_soft"
        android:text="@string/action_remove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_subtitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_cancel"
        style="?android:buttonBarPositiveButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/all_margin_top_soft"
        android:text="@string/action_cancel"
        app:layout_constraintEnd_toStartOf="@id/button_done"
        app:layout_constraintTop_toBottomOf="@id/text_subtitle" />
</androidx.constraintlayout.widget.ConstraintLayout>